--- a/meli-app/package.json
+++ b/meli-app/package.json
@@ -8,12 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "next": "10.2.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.34.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/react": "17.0.6",
     "typescript": "4.2.4"
   }
