--- a/meli-app/tsconfig.json
+++ b/meli-app/tsconfig.json
@@ -14,6 +14,6 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/Card/index.spec.js", "components/Card/index.spec.js"],
   "exclude": ["node_modules"]
 }
